--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,14 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.cards-container .card {
+  margin-right: 20px;
+  margin-bottom: 20px;
+  width: 300px;
+}
